--- a/package.json
+++ b/package.json
@@ -9,16 +9,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/fiber": "^8.11.9",
     "framer-motion": "^10.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-horizontal-scrolling-menu": "^3.2.5",
+    "react-icons": "^4.8.0",
     "react-router-dom": "^6.8.2",
-    "styled-components": "^5.3.8"
+    "styled-components": "^5.3.8",
+    "three": "^0.150.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@types/styled-components": "^5.1.26",
+    "@types/three": "^0.149.0",
     "@vitejs/plugin-react": "^3.1.0",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
