--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
   },
   "dependencies": {
     "@react-three/fiber": "^8.11.9",
+    "@types/react-slick": "^0.23.10",
     "framer-motion": "^10.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-horizontal-scrolling-menu": "^3.2.5",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.8.2",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.8",
+    "swiper": "^9.1.0",
     "three": "^0.150.1"
   },
   "devDependencies": {
