--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.8.2",
     "react-slick": "^0.29.0",
+    "recoil": "^0.7.7",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.8",
     "swiper": "^9.1.0",
