Feat: 슬라이더 수정 완료

--- a/package.json
+++ b/package.json
@@ -6,31 +6,33 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "ts-node": "ts-node -r tsconfig-paths/register ./src/index.ts"
   },
   "dependencies": {
-    "@react-three/fiber": "^8.11.9",
     "@types/react-slick": "^0.23.10",
     "framer-motion": "^10.0.2",
+    "module-alias": "^2.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-horizontal-scrolling-menu": "^3.2.5",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.8.2",
     "react-slick": "^0.29.0",
     "recoil": "^0.7.7",
     "slick-carousel": "^1.8.1",
-    "styled-components": "^5.3.8",
-    "swiper": "^9.1.0",
-    "three": "^0.150.1"
+    "styled-components": "^5.3.8"
   },
   "devDependencies": {
+    "@types/node": "^18.15.3",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@types/styled-components": "^5.1.26",
     "@types/three": "^0.149.0",
     "@vitejs/plugin-react": "^3.1.0",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.1.2",
     "typescript": "^4.9.3",
-    "vite": "^4.1.0"
+    "vite": "^4.1.0",
+    "vite-tsconfig-paths": "^4.0.7"
   }
 }
