Feat: 불필요한 라이브러리 삭제, path alias 수정

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,18 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "baseUrl": "src"
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["*"],
+      "@Components/*": ["src/components/*"],
+      "@Assets/*": ["src/assets/*"],
+      "@Constants/*": ["src/constants/*"],
+      "@Data/*": ["src/data/*"],
+      "@Pages/*": ["src/pages/*"],
+      "@Recoil/*": ["src/recoil/*"],
+      "@Styles/*": ["src/styles/*"],
+      "@Hooks/*": ["src/hooks/*"]
+    }
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
