--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "tsconfig-paths": "^4.1.2",
     "typescript": "^4.9.3",
     "vite": "^4.1.0",
+    "vite-plugin-favicon": "^1.0.8",
     "vite-tsconfig-paths": "^4.0.7"
   }
 }
