--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "./",
+  "homepage": ".",
   "scripts": {
     "dev": "vite --host=0.0.0.0",
     "build": "tsc && vite build",
