--- a/package.json
+++ b/package.json
@@ -6,33 +6,40 @@
   "homepage": ".",
   "scripts": {
     "dev": "vite --host=0.0.0.0",
-    "build": "tsc && vite build",
+    "build": "tsc && vite build:client && vite build:server",
+    "build:client": "vite build --outDir dist/client",
+    "build:server": "vite build --ssr src/entry-server.tsx --outDir dist/server",
+    "generate": "vite build --outDir dist/static && npm run build:server && node prerender",
+    "serve": "cross-env NODE_ENV=production node server",
     "preview": "vite preview",
     "ts-node": "ts-node -r tsconfig-paths/register ./src/index.ts"
   },
   "dependencies": {
-    "@types/react-slick": "^0.23.10",
+    "@types/react-helmet-async": "^1.0.3",
     "framer-motion": "^10.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^1.3.0",
     "react-icons": "^4.8.0",
-    "react-router-dom": "^6.8.2",
-    "react-slick": "^0.29.0",
+    "react-router-dom": "^6.9.0",
     "recoil": "^0.7.7",
-    "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.8"
   },
   "devDependencies": {
     "@types/node": "^18.15.3",
-    "@types/react": "^18.0.27",
-    "@types/react-dom": "^18.0.10",
+    "@types/react": "^18.0.31",
+    "@types/react-dom": "^18.0.11",
     "@types/styled-components": "^5.1.26",
     "@types/three": "^0.149.0",
     "@vitejs/plugin-react": "^3.1.0",
+    "compression": "^1.7.4",
+    "cross-env": "^7.0.3",
+    "express": "^4.18.2",
+    "serve-static": "^1.15.0",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.1.2",
-    "typescript": "^4.9.3",
-    "vite": "^4.1.0",
+    "typescript": "^4.9.5",
+    "vite": "^4.2.1",
     "vite-plugin-favicon": "^1.0.8",
     "vite-tsconfig-paths": "^4.0.7"
   }
