--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": ".",
   "scripts": {
     "dev": "vite --host=0.0.0.0",
-    "build": "tsc && vite build:client && vite build:server",
+    "build": "tsc && vite build --outDir dist/client && vite build --ssr src/entry-server.tsx --outDir dist/server",
+    "build-original": "tsc && vite build",
     "build:client": "vite build --outDir dist/client",
     "build:server": "vite build --ssr src/entry-server.tsx --outDir dist/server",
     "generate": "vite build --outDir dist/static && npm run build:server && node prerender",
@@ -15,7 +15,6 @@
     "ts-node": "ts-node -r tsconfig-paths/register ./src/index.ts"
   },
   "dependencies": {
-    "@types/react-helmet-async": "^1.0.3",
     "framer-motion": "^10.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
